--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -37,4 +37,22 @@
       </p>
     </div>
   </div>    
+
+  <div class="row">
+    <div class="col-xs-12">
+        <h3 style="color: #7f0000;">
+          <b>Created By:</b>
+        </h3>
+      <div class="row">
+        <div class="col-xs-3" style="margin-left: 2rem;">
+          <p>Mehrshad Matin</p>
+          <p>Khashayar Yousefi</p>
+          <p>Hussain Hassam</p>
+          <p>Afke Holgersen</p>
+          <p>Jason Chan</p>
+        </div>
+      </div>
+    </div>
+  </div>  
+
 </div>
