--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag 'index' %>
+<%= stylesheet_link_tag 'gallery' %>
 <% if current_user %>
   <h1 style="float: right; font-size: 18px;">
   	Logged in as <%=link_to current_user.username, edit_user_path(current_user) %>
@@ -11,15 +12,42 @@
 
 <div class="recipes_of_the_week">
   <h2>Popular Recipes of the Week</h2>
-  <% @recipes.each do |r| %>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 60%; height: 50%">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+  <% @recipes.each_with_index do |r, index| %>
+    <% if index==0 %>
+      <div class="item active">
+    <% else %>
+      <div class="item">
+    <% end %>
+
   	<% if current_user %>
 	    <a href="<%= recipe_path(r) %>">
 	   <% else %>
 	   	<a href="<%= new_session_path %>">
 	  <% end %>
-    <img id = "saved-image"  class="img-responsive" src="<%= r.sourceIcon %>" width="130"></a>
+    <img class="img-responsive center-block" src="<%= r.sourceIcon %>"  ></a>
+  </div>
   <%end%>
+  </div>
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
 </div>
+</div>
+
 <div class="container">
 	<div class="main-page">
 	  <div class="main-page-links">
