--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,9 +11,8 @@
 </div>
 
 <div class="recipes_of_the_week">
-  <h2>Popular Recipes of the Week</h2>
+  <h2 style="text-align: center; font-family:'Comic Sans MS',cursive,sans-serif; font-weight: 700;">Popular Recipes of the Week</h2>
   <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 60%; height: 50%">
-  <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -34,6 +33,9 @@
 	   	<a href="<%= new_session_path %>">
 	  <% end %>
     <img class="img-responsive center-block" src="<%= r.sourceIcon %>"  ></a>
+    <div class="carousel-caption" style="bottom: 7%">
+      <h3 style="font-size: 40px; color: #990000; font-style: italic; font-weight: bold; background-color: #eff4fc; filter: alpha(opacity=100); opacity: 0.8; display: inline-block"><%= r.title %></h3>
+    </div>
   </div>
   <%end%>
   </div>
