--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,67 +26,55 @@
         </div>
         <div>
           <ul class="nav navbar-nav navbar-right">
-            <li class="search-bar">
-              <%= text_field_tag :search, params[:search], class: "form-control" %>
-            </li>
-            <li class="search-bar dropdown">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
-            <ul class="dropdown-menu">
-            <div class="advanced-dropdown" style="overflow-y: scroll">
-              <%= form_tag users_search_path, :method => 'get' do %>
-                <li> Health labels </li>
-                <% Healthlabel.all.each do |hlabel| %>
-                  <% if searchableHealthLabels.include? hlabel.id %>
-                    <li class="advanced-params">
-                      <% if params["healthlabel_apiparameters"] %>
-                        <% if params["healthlabel_apiparameters"].include? hlabel.apiparameter %>
-                            <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter, true %>
-                        <% else %>
-                            <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter -%>
-                        <% end %>
-                      <% else %>
-                          <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter -%>
-                      <% end %>
-                      <%= h hlabel.name -%>
-                    </li>
-                    <% end %>
-                <%end%>
-                <li> Diet labels </li>
-                <% Dietlabel.all.each do |dlabel| %>
-                  <% if searchableDietLabels.include? dlabel.id %>
-                <li class="advanced-params" >
-                  <% if params["dietlabel_apiparameters"] %>
-                        <% if params["dietlabel_apiparameters"].include? dlabel.apiparameter %>
-                            <%= check_box_tag 'dietlabel_apiparameters[]', dlabel.apiparameter, true %>
-                        <% else %>
-                            <%= check_box_tag 'dietlabel_apiparameters[]', dlabel.apiparameter -%>
-                        <% end %>
-                      <% else %>
+            <div>
+              <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown search-bar left">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                    <div class="advanced-dropdown" style="overflow-y: scroll">
+                      <%= form_tag users_search_path, :method => 'get' do %>
+                        <li> Health labels </li>
+                        <% Healthlabel.all.each do |hlabel| %>
+                          <% if searchableHealthLabels.include? hlabel.id %>
+                            <li class="advanced-params">
+                              <% if params["healthlabel_apiparameters"] %>
+                                <% if params["healthlabel_apiparameters"].include? hlabel.apiparameter %>
+                                    <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter, true %>
+                                <% else %>
+                                    <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter -%>
+                                <% end %>
+                              <% else %>
+                                  <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter -%>
+                              <% end %>
+                              <%= h hlabel.name -%>
+                            </li>
+                            <% end %>
+                        <%end%>
+                        <li> Diet labels </li>
+                        <% Dietlabel.all.each do |dlabel| %>
+                          <% if searchableDietLabels.include? dlabel.id %>
+                        <li class="advanced-params" >
                           <%= check_box_tag 'dietlabel_apiparameters[]', dlabel.apiparameter -%>
-                      <% end %>
-                  <%= h dlabel.name -%>
+                          <%= h dlabel.name -%>
+                        </li>
+                        <% end %>
+                      <%end%>
+
+                      <li> Minimum Calories: <%= text_field_tag :mincalories, params[:mincalories] %> </li>
+                      <li> Maximum Calories: <%= text_field_tag :maxcalories, params[:maxcalories] %> </li>
+
+                      </div>
+                    </ul>
+                  </li> <!-- dropdown -->
+
+                <li class="search-bar left ">
+                  <%= text_field_tag :search, params[:search], class: "left form-inline" %>
+
+                  <%= submit_tag "Search", :name => nil, class: "btn btn-primary search-button"%>
+
+
+                  <% end %>
                 </li>
-                <% end %>
-              <%end%>
-
-              <li> Minimum Calories: <%= text_field_tag :mincalories, params[:mincalories] %> </li>
-              <li> Maximum Calories: <%= text_field_tag :maxcalories, params[:maxcalories] %> </li>
-              <li>
-              <%= button_tag"",type: 'submit', class: "btn btn-primary", :name => nil  do%>
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-              <%end%>
-            </li>
-              </div>
-            </ul>
-          </li>
-
-            <li class="search-bar">
-              <%= button_tag"",type: 'submit', class: "btn btn-primary", :name => nil  do%>
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-              <%end%>
-
-              <%end %> <!--- end of buttons for ruby -->
-            </li>
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
@@ -120,4 +108,12 @@
   </div>
 
   </body>
+  <footer class="footer-distributed">
+    <div class="footer-left">
+
+  <p class="footer-links">
+    <%= link_to "@ 2016 FoodNatic", welcome_index_path %>
+  </p>
+</div>
+  </footer>
 </html>
