--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,7 +61,6 @@ li{
 
 #saved-img img{
   width: 200%;
-
 }
 
 body{
@@ -111,7 +110,7 @@ body{
 
 	padding: 20px 20px;
 	margin-top: 80px;
-  position:fixed;
+  position:static;
   bottom:0;
 }
 
